@@ -3,23 +3,49 @@ package ebulter.quote.lambda.repository;
 import ebulter.quote.lambda.model.Quote;
 import software.amazon.awssdk.services.dynamodb.DynamoDbClient;
 import software.amazon.awssdk.services.dynamodb.model.*;
-
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
+import java.util.stream.Collectors;
 
 public class QuoteRepository {
     private static final DynamoDbClient dynamoDb = DynamoDbClient.create();
     private static final String TABLE_NAME = System.getenv("DYNAMODB_TABLE");
 
-    public QuoteRepository() {
+    private final UserLikeRepository userLikeRepository;
+
+    public QuoteRepository(UserLikeRepository userLikeRepository) {
+        this.userLikeRepository = userLikeRepository;
     }
 
     public List<Quote> getAllQuotes() {
-        ScanResponse scanResponse = dynamoDb.scan(ScanRequest.builder().tableName(TABLE_NAME).build());
-        return scanResponse.items().stream().map(item ->
-                new Quote(Integer.parseInt(item.get("id").n()), item.get("quoteText").s(), item.get("author").s())).toList();
+        // First, get all quotes
+        ScanResponse quoteScan = dynamoDb.scan(ScanRequest.builder()
+                .tableName(TABLE_NAME)
+                .build());
+
+        if (quoteScan.items().isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        // Extract quote IDs
+        List<Integer> quoteIds = quoteScan.items().stream()
+                .map(item -> Integer.parseInt(item.get("id").n()))
+                .collect(Collectors.toList());
+
+        // Get like counts for all quotes
+        Map<Integer, Integer> likeCounts = userLikeRepository.getLikeCounts(quoteIds);
+
+        // Map to Quote objects with like counts
+        return quoteScan.items().stream()
+                .map(item -> {
+                    Quote quote = new Quote(
+                            Integer.parseInt(item.get("id").n()),
+                            item.get("quoteText").s(),
+                            item.get("author").s(),
+                            likeCounts.getOrDefault(Integer.parseInt(item.get("id").n()), 0)
+                    );
+                    return quote;
+                })
+                .collect(Collectors.toList());
     }
 
     public void saveAll(Set<Quote> quotes) {
@@ -38,7 +64,6 @@ public class QuoteRepository {
                 .build();
 
         dynamoDb.putItem(putItemRequest);
-
     }
 
     public Quote findById(int id) {
@@ -48,10 +73,35 @@ public class QuoteRepository {
         GetItemResponse getItemResponse = dynamoDb.getItem(request);
         if (getItemResponse.hasItem()) {
             Map<String, AttributeValue> item = getItemResponse.item();
-            return new Quote(Integer.parseInt(item.get("id").n()), item.get("quoteText").s(), item.get("author").s());
+            // Get like count for this specific quote
+            int likeCount = userLikeRepository.getLikeCount(id);
+            return new Quote(
+                    Integer.parseInt(item.get("id").n()),
+                    item.get("quoteText").s(),
+                    item.get("author").s(),
+                    likeCount
+            );
         } else {
             return null;
         }
     }
 
+    /**
+     * Get the highest quote ID efficiently using a scan with projection
+     */
+    public int getMaxQuoteId() {
+        ScanResponse scanResponse = dynamoDb.scan(ScanRequest.builder()
+                .tableName(TABLE_NAME)
+                .projectionExpression("id")
+                .build());
+
+        if (scanResponse.items().isEmpty()) {
+            return 0;
+        }
+
+        return scanResponse.items().stream()
+                .map(item -> Integer.parseInt(item.get("id").n()))
+                .max(Integer::compareTo)
+                .orElse(0);
+    }
 }
